apps/base/joplin/joplin.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joplin
  namespace: joplin-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joplin
  template:
    metadata:
      labels:
        app: joplin
    spec:
      securityContext:
        fsGroup: 1001
        runAsNonRoot: true
        runAsUser: 1001
      volumes:
        - name: saml-sp-config
          configMap:
            name: joplin-saml-sp-config-map
        - name: saml-idp-config
          secret:
            secretName: joplin-saml-idp-secret
      containers:
        - name: joplin
          volumeMounts:
            - name: saml-sp-config
              mountPath: /opt/joplin/joplin-sp.xml
              subPath: joplin-sp.xml
              readOnly: true
            - name: saml-idp-config
              mountPath: /opt/joplin/joplin-idp.xml
              subPath: joplin-idp.xml
              readOnly: true
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          image: "joplin/server:3.6.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 22300
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/ping
              port: http
              httpHeaders:
                - name: Host
                  value: joplin.winetree94.com
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /api/ping
              port: http
              httpHeaders:
                - name: Host
                  value: joplin.winetree94.com
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
