apps/base/joplin/joplin.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: joplin-service
  namespace: joplin-system
spec:
  selector:
    app: joplin
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 22300
    - name: https
      protocol: TCP
      port: 443
      targetPort: 22300
  type: ClusterIP
